--- a/css/availableTest.css
+++ b/css/availableTest.css
@@ -1,11 +1,20 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  overflow-x : hidden;
+}
 body {
-    font-family: Arial, Helvetica, sans-serif;
     background-color: cadetblue;
-    overflow-x: hidden;
   }
   /* .allTestContainer {
    
   }*/
+  .space{
+    margin-bottom: 50px;
+
+  }
   .testCard {
     padding: 10px;
   }
@@ -103,3 +112,10 @@ body {
     filter: blur(0);
     transform: translateX(0);
   }
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index:1;
+  }
+  
